--- a/src/server/scripts/Kalimdor/CMakeLists.txt
+++ b/src/server/scripts/Kalimdor/CMakeLists.txt
@@ -179,6 +179,7 @@ set(scripts_STAT_SRCS
   Kalimdor/zone_bloodmyst_isle.cpp
   Kalimdor/zone_thunder_bluff.cpp
   Kalimdor/zone_azshara.cpp
+  Kalimdor/zone_echo_isles.cpp
 
   
 )
