Build/Misc: Fix compile

--- a/src/server/authserver/authserver.conf.dist
+++ b/src/server/authserver/authserver.conf.dist
@@ -1,5 +1,5 @@
 ###############################################
-# ArkCORE Core Auth Server configuration file #
+# ArkCORE Auth Server configuration file #
 ###############################################
 [authserver]
 
