--- a/src/server/worldserver/worldserver.conf.dist
+++ b/src/server/worldserver/worldserver.conf.dist
@@ -978,10 +978,10 @@ BeepAtStart = 1
 #    Motd
 #        Description: Message of the Day, displayed at login.
 #                     Use '@' for a newline and be sure to escape special characters.
-#        Example:     "Welcome to John\'s Server@This server runs on Trinity Core."
+#        Example:     "Welcome to John\'s Server@This server runs on ArkCORE."
 #        Default:     "Welcome to a ArkCORE server."
 
-Motd = "Welcome to a Trinity Core server."
+Motd = "Welcome to a ArkCORE server."
 
 #
 #    Server.LoginInfo
