Core/Chat: Add new config channel
Signed-off-by: ladel <infobox12@mail.ru>

--- a/src/server/worldserver/worldserver.conf.dist
+++ b/src/server/worldserver/worldserver.conf.dist
@@ -1155,6 +1155,14 @@ Warden.BanDuration = 86400
 ###################################################################################################
 # PLAYER INTERACTION
 #
+#    AllowTwoSide.Interaction.LFG
+#        Description: Allow say chat looking for group between factions.
+#        Default:     0 - (Disabled)
+#                     1 - (Enabled)
+
+AllowTwoSide.Interaction.LFG = 0
+
+#
 #    AllowTwoSide.Interaction.Calendar
 #        Description: Allow calendar invites between factions.
 #        Default:     0 - (Disabled)
