--- a/src/server/scripts/EasternKingdoms/CMakeLists.txt
+++ b/src/server/scripts/EasternKingdoms/CMakeLists.txt
@@ -254,7 +254,7 @@ set(scripts_STAT_SRCS
   EasternKingdoms/zone_elwynn_forest.cpp
   EasternKingdoms/zone_coldridge_valley.cpp
   EasternKingdoms/zone_gilneas.cpp
-
+  EasternKingdoms/zone_duskhaven.cpp
   
 )
 
