--- a/src/server/worldserver/worldserver.conf.dist
+++ b/src/server/worldserver/worldserver.conf.dist
@@ -2953,7 +2953,7 @@ AuctionHouseBot.Update.Interval = 20
 #       Default:     0 - (Disabled)
 #                    1 - (Enabled)
 
-AuctionHouseBot.Seller.Enabled = 1
+AuctionHouseBot.Seller.Enabled = 0
 
 #
 #    AuctionHouseBot.Alliance.Items.Amount.Ratio
@@ -3245,7 +3245,7 @@ AuctionHouseBot.forceExcludeItems = ""
 #       Default:     0 - (Disabled)
 #                    1 - (Enabled)
 
-AuctionHouseBot.Buyer.Enabled = 1
+AuctionHouseBot.Buyer.Enabled = 0
 
 #
 #    AuctionHouseBot.Buyer.FACTION.Enabled
@@ -3288,7 +3288,7 @@ AuctionHouseBot.Buyer.Neutral.Chance.Ratio = 3
 ###################################################################################################
 
 ###################################################################################################
-#    ChatCensor config
+#    CHATCENSOR CONFIGURATION
 #
 #    ChatCensor.Enabled
 #       Description: General enable or disable ChatCensor Bad Words functionality
@@ -3301,8 +3301,8 @@ ChatCensor.Enabled = 0
 #    ChatCensor.BadnessLevel
 #       Description: How bad is a word.
 #                    0 - (Censor is Disabled)
-                    >0 - (Censor is Enabled. Trigger level of BadNess value.)
-		Default:     1 - (all bad word's are banned)
+#                    >0 - (Censor is Enabled. Trigger level of BadNess value.)
+#		Default:     1 - (all bad word's are banned)
 #                   
 
 ChatCensor.BadnessLevel = 1
@@ -3316,9 +3316,9 @@ ChatCensor.BadnessLevel = 1
 #     Bot.EnableNpcBots
 #        Enable NpcBot system
 #        Default: 1 - enable
-#                       0 - disable
+#                 0 - disable
 
-Bot.EnableNpcBots = 1
+Bot.EnableNpcBots = 0
 
 #    Bot.MaxNpcBots
 #        Maximum number of Npc Bots allowed per character (disabled for GM accounts)
