--- a/src/server/scripts/EasternKingdoms/CMakeLists.txt
+++ b/src/server/scripts/EasternKingdoms/CMakeLists.txt
@@ -274,6 +274,7 @@ set(scripts_STAT_SRCS
   EasternKingdoms/zone_elwynn_forest.cpp  
   EasternKingdoms/zone_coldridge_valley.cpp
   EasternKingdoms/zone_dun_morogh.cpp
+  EasternKingdoms/zone_northern_stranglethorn.cpp
 )
 
 message("  -> Prepared: Eastern Kingdoms")
