--- a/src/server/worldserver/worldserver.conf.dist
+++ b/src/server/worldserver/worldserver.conf.dist
@@ -407,6 +407,8 @@ PidFile = ""
 #        Description: Binary packet logging file for the world server.
 #                     Filename extension must be .bin to be parsable with WowPacketParser.
 #        Example:     "World.bin" - (Enabled)
+                      Filename extension must be .pkt to be parsable with WowPacketParser. pkt format store more data.
+#        Example:     "World.pkt" - (Enabled)
 #        Default:     ""          - (Disabled)
 
 PacketLogFile = ""
